# r3games

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  README.md  book.toml  index.html  launch-blender.bat  launch-blender.sh  naming_conventions.html  print.html  rust-toolchain.toml  searchindex.js  searchindex.json
Assets/PlatformTest/chr/main_character/: breakdown.xcf  main_chr_rig.blend  main_chr_rig.blend1
Assets/PlatformTest/chr/main_character/main_chr/: main_chr.json
Assets/PlatformTest/world/world0/: world0.tmx
GameCore/: Cargo.toml
Games/PlatformTest/: Cargo.toml  project.godot
Pipeline/Blender/addons/: wiggle-bones.py
docs/: SUMMARY.md  naming_conventions.md
