[package]
name = "game-core"
publish = false
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
puffin = { version = "0.9", optional = true }
puffin_http = { version = "0.6", optional = true }

[features]
puffin = ["dep:puffin", "puffin_http"]
